--- a/Licenta2018WebApplication/pom.xml
+++ b/Licenta2018WebApplication/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.0.M5</version>
+		<version>1.5.3.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -50,7 +50,6 @@
 		<dependency>
 			<groupId>net.sourceforge.nekohtml</groupId>
 			<artifactId>nekohtml</artifactId>
-			<version>1.9.21</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -73,8 +72,13 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>4.2.1</version>
 		</dependency>
 
 	</dependencies>
