Tradus in RO :)

--- a/Licenta2018WebApplication/src/main/resources/application.properties
+++ b/Licenta2018WebApplication/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username = root
 spring.datasource.password =
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.continueOnError=true
 spring.thymeleaf.mode=LEGACYHTML5
-server.tomcat.uri-encoding = ISO-8859-1
+server.tomcat.uri-encoding=UTF-8
